<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Basic twitter</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_photos">Flickr Photos</string>
    <string name="login_label">Connect</string>
    <string name="title_activity_timeline">TimelineActivity</string>
    <string name="foo_label">\@foo</string>
    <string name="user_label">User name</string>
    <string name="tweet_label">Tweet</string>
    <string name="compose_label">What\'s happening?</string>
    <string name="tweet_text">This is the tweet body</string>
    <string name="timestamp_label">Timestamp</string>
    <string name="title_activity_tweet_detail">TweetDetailActivity</string>
    <string name="char_count">Char count</string>
    <string name="welcome_label">Hello. Welcome to Twitter.</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="title_profile">Profile</string>
    <string name="followers_count">FOLLOWERS</string>
    <string name="count">#</string>
    <string name="friends_count">FRIENDS</string>
    <string name="tweets_count">TWEETS</string>
    <string name="retweets_count">RETWEETS</string>
    <string name="favorites_count">FAVORITES</string>
    <string name="tagline_label">Tagline</string>
    <string name="title_activity_users">UsersActivity</string>
    <string name="title_activity_search">SearchActivity</string>

</resources>