<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:padding="5dp">

    <ImageView
        android:id="@+id/ivUserImage"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/twitter_new_icon" />

    <TextView
        android:id="@+id/tvUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/ivUserImage"
        android:text="@string/user_label"
        android:layout_marginLeft="10dp"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/tvUserScnName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvUserName"
        android:layout_below="@+id/tvUserName"
        android:text="@string/foo_label"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#A4A4A4" />

    <TextView
        android:id="@+id/tvUserTagline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvUserScnName"
        android:layout_below="@+id/tvUserScnName"
        android:text="@string/tagline_label" />

    <ImageView
        android:id="@+id/ivUserVerified"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/tvUserName"
        android:src="@drawable/verified_icon" />

    <ImageView
        android:id="@+id/ivUserConnected"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="18dp"
        android:src="@drawable/add_contact_blue" />

</RelativeLayout>
