<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:clipChildren="false"
    android:clipToPadding="false"
    android:descendantFocusability="blocksDescendants"
    android:padding="10dp"
    tools:context="${relativePackage}.${activityClass}" >

    <ImageView
        android:id="@+id/ivProfileImage"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:adjustViewBounds="true"
        android:onClick="onClickProfileView"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_launcher" />

    <TextView
        android:id="@+id/tvUserProfileName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="5sp"
        android:layout_toRightOf="@+id/ivProfileImage"
        android:text="@string/user_label"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvUserScreenName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/tvUserProfileName"
        android:layout_below="@id/tvUserProfileName"
        android:text="@string/foo_label"
        android:textColor="#777777" />

    <TextView
        android:id="@+id/tvBody"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/ivProfileImage"
        android:layout_marginBottom="5dp"
        android:autoLink="all"
        android:linksClickable="false"
        android:text="@string/tweet_text" />

    <TextView
        android:id="@+id/tvCreatedAt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/timestamp_label"
        android:textColor="#777777" />

    <ImageView
        android:id="@+id/ivMediaImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/tvBody"
        android:layout_marginTop="5dp"
        android:adjustViewBounds="true"
        android:scaleType="fitStart"
        android:src="@drawable/ic_launcher" />

    <View
        android:id="@+id/vFirstDivider"
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:layout_below="@+id/ivMediaImage"
        android:layout_marginTop="5dp"
        android:background="#DEDEDE" />

    <LinearLayout
        android:id="@+id/llTweetStatisticsContainter"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/vFirstDivider"
        android:paddingBottom="4sp"
        android:paddingTop="4sp" >

        <TextView
            android:id="@+id/tvRetweetCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tweets_count"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvRetweets"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="5sp"
            android:text="@string/retweets_count"
            android:textColor="#777777" />

        <TextView
            android:id="@+id/tvFavoritesCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10sp"
            android:text="@string/tweets_count"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvFavorites"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="5sp"
            android:text="@string/favorites_count"
            android:textColor="#777777" />
    </LinearLayout>

    <View
        android:id="@+id/vSecondDivider"
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:layout_below="@+id/llTweetStatisticsContainter"
        android:layout_marginTop="5dp"
        android:background="#DEDEDE" />

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/tvBody"
        android:layout_alignParentRight="true"
        android:layout_below="@id/vSecondDivider"
        android:layout_marginTop="5dp"
        android:shrinkColumns="*"
        android:stretchColumns="*" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >

            <ImageView
                android:id="@+id/ivReplyIcon"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:adjustViewBounds="true"
                android:src="@drawable/reply_arrow" />

            <ImageView
                android:id="@+id/ivRetweetIcon"
                android:layout_width="25dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:adjustViewBounds="true"
                android:src="@drawable/rewteet_symbol" />

            <ImageView
                android:id="@+id/ivFavoriteIcon"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:adjustViewBounds="true"
                android:src="@drawable/favorite_star" />

            <ImageView
                android:id="@+id/ivShareIcon"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_gravity="center"
                android:adjustViewBounds="true"
                android:src="@drawable/share_icon" />
        </TableRow>

        <View
            android:id="@+id/vThirdDivider"
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:layout_below="@+id/ivRetweetIcon"
            android:layout_marginTop="5dp"
            android:background="#DEDEDE" />
    </TableLayout>

    <ImageView
        android:id="@+id/ivVerified"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/tvUserProfileName"
        android:src="@drawable/verified_icon" />

</RelativeLayout>